# CryoSwarm-Q

./: .coverage  .env.example  .gitignore  CLAUDE.md  P0_FONDATIONS_PROMPT.md  P0_PROMPT.md  P1_P2_PROMPT.md  P1_ROBUSTESSE_PROMPT.md  P2_SECURITE_PRODUCTION_PROMPT.md  P3_AMELIORATIONS_SCIENTIFIQUES_PROMPT.md  P4_DASHBOARD_PHD_PROMPT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml
apps/api/: auth.py  dependencies.py  live.py  main.py  rate_limit.py
apps/api/routes/: campaigns.py  (+4 more)
apps/dashboard/: app.py  logic.py
docs/: TEST_EVOLUTION.md
prompts/: P4_TRAINING_AND_HARDCODED_PARAMS.md
runs/ppo/: events.out.tfevents.1775465706.jackson_pc.23864.0  events.out.tfevents.1775465708.jackson_pc.23864.1  events.out.tfevents.1775465874.jackson_pc.3724.0  events.out.tfevents.1775465878.jackson_pc.3724.1  events.out.tfevents.1775466075.jackson_pc.23004.0  events.out.tfevents.1775466076.jackson_pc.23004.1  events.out.tfevents.1775466388.jackson_pc.26028.0  events.out.tfevents.1775466390.jackson_pc.26028.1  events.out.tfevents.1775466718.jackson_pc.22180.0  events.out.tfevents.1775466720.jackson_pc.22180.1  events.out.tfevents.1775467481.jackson_pc.24468.0  events.out.tfevents.1775467484.jackson_pc.24468.1  events.out.tfevents.1775468277.jackson_pc.26156.0  events.out.tfevents.1775468280.jackson_pc.26156.1  events.out.tfevents.1775468532.jackson_pc.30980.0  events.out.tfevents.1775468534.jackson_pc.30980.1  events.out.tfevents.1775469057.jackson_pc.24276.0  events.out.tfevents.1775469059.jackson_pc.24276.1  events.out.tfevents.1775469282.jackson_pc.756.0  events.out.tfevents.1775469284.jackson_pc.756.1  events.out.tfevents.1775470410.jackson_pc.29600.0  events.out.tfevents.1775470412.jackson_pc.29600.1  events.out.tfevents.1775470513.jackson_pc.29560.0  (+53 more)
scripts/: ablation.py  benchmark.py  run_demo_pipeline.py  seed_demo_goal.py  test_mongo.py  train_ml.py
tests/: conftest.py  test_active_learning.py  test_additional_fast_checks.py  test_agent_protocols.py  test_api_auth.py  test_api_error_handling.py  test_api_infrastructure.py  test_api_routes.py  test_benchmark.py  test_cors.py  test_curriculum.py  test_dashboard_components.py  test_dashboard_logic.py  test_data_generator.py  test_data_loaders.py  test_db_repository.py  test_error_handling.py  test_evaluation_cache.py  test_exceptions.py  test_feature_normalization.py  test_feature_v2.py  test_frozen_models.py  test_geometry_agent.py  test_geometry_physics.py  test_hamiltonian.py  test_health.py  test_memory_adaptation_extra.py  test_memory_intelligence.py  test_metadata_schemas.py  test_ml_dataset.py  test_ml_filter.py  test_ml_gpu.py  test_ml_rl.py  test_ml_surrogate.py  test_model_validators.py  test_mongodb_config.py  test_multi_step_rl.py  test_noise_profiles.py  test_objective.py  test_objective_score.py  (+21 more)
(+13 files in other folders)
