[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoswarm-q"
version = "0.1.0"
description = "Hardware-aware multi-agent orchestration for neutral-atom experiment design."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Daniel M'Bouyou" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pymongo>=4.7",
  "dnspython>=2.6.1",
  "python-dotenv>=1.0",
  "pulser>=1.6,<1.7",
  "qoolqit>=0.4",
  "pasqal-cloud>=0.22",
  "streamlit>=1.38",
  "requests>=2.32",
  "numpy>=2.1",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "plotly>=5.22",
  "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "pytest-cov>=5.0",
]
ml = [
  "torch>=2.2",
  "tensorboard>=2.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "gpu: tests requiring CUDA or ROCm GPU backend",
  "slow: tests taking more than 10 seconds",
  "integration: end-to-end pipeline integration tests",
  "mongo: tests requiring a live MongoDB connection",
  "pulser: tests requiring the pulser package",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["packages", "apps"]
omit = [
  "packages/ml/gpu_backend.py",
  "apps/dashboard/app.py",
  "apps/dashboard/pages/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
exclude_lines = [
  "pragma: no cover",
  "if __name__",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
